kubernetes/auth.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    name: auth


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: auth
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: auth
    spec:
      nodeSelector:
$(list=(${logbook_auth__nodeSelectors// / }); for k in "${!list[@]}"; do kv=(${list[k]//\=/ }); echo "        ${kv[0]}: ${kv[1]}"; done)
      containers:
        - name: auth
          image: slaclab/explgbk-auth:${logbook_auth__tag}
          ports:
            - containerPort: 443
          #livenessProbe:
          #  httpGet:
          #    path: /
          #    port: 433 
          #  initialDelaySeconds: 10
          #  periodSeconds: 10
          #readinessProbe:
          #  httpGet:
          #    path: /
          #    port: 433
          #  initialDelaySeconds: 30
          #  periodSeconds: 10
          volumeMounts:
            - name: auth-secrets
              mountPath: /etc/httpd/certs/
            - name: auth-exp-data
              mountPath: /expdata/
            - name: auth-configmap
              mountPath: /etc/httpd/conf.d/explgbk.conf
              subPath: explgbk.conf
      volumes:
        - name: auth-secrets
          secret:
            secretName: auth-secrets
            items:
              - key: cert.crt
                path: cert.crt
              - key: cert.key
                path: cert.key
              - key: keytab_webauth
                path: keytab_webauth
              - key: backend.htpasswd
                path: backend.htpasswd
              - key: intermediates.cer
                path: intermediates.cer
        - name: auth-exp-data
          persistentVolumeClaim:
            claimName: ${namespace}-expdata-${environment}
        - name: auth-configmap
          configMap:
            name: auth-explgbk-config
            items:
              - key: explgbk.conf
                path: explgbk.conf
