kubernetes/database.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
    
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo"
  updateStrategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      role: mongo
  template:
    metadata:
      labels:
        role: mongo
        environment: prod
    spec:
      terminationGracePeriodSeconds: 10
      nodeSelector:
        # group: cryoem
        storage: gpfs
        # prob need gpfs=cryo
      containers:
        - name: mongo
          image: mongo
          command:
            - mongod
            # - --config=/data/configdb/mongod.conf
            - --dbpath=/data/db
            - "--replSet"
            - rs0
            - "--smallfiles"
            - "--noprealloc"
            - "--bind_ip"
            - 0.0.0.0
          ports:
            - containerPort: 27017
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
          volumeMounts:
            - name: mongo
              mountPath: /data/db
            - name: docker-initdb-config
              mountPath: /docker-entrypoint-initdb.d
        - name: mongo-sidecar
          image: cvallance/mongo-k8s-sidecar
      volumes:
        - name: docker-initdb-config
          configMap:
            name: docker-initdb-config
            items:
            - key: 10_users.sh
              path: 10_users.sh
            - key: 20_site.js
              path: 20_site.js
            - key: 30_instruments.js
              path: 30_instruments.js
            - key: 40_experiments.sh
              path: 40_experiments.sh
            - key: 45_experiment_switch.js
              path: 45_experiment_switch.js
            - key: 50_site-roles.js
              path: 50_site-roles.js
        
  volumeClaimTemplates:
    - metadata:
        name: mongo
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: cryoem-logbook-mongodb
        resources:
          requests:
            storage: 20Gi
